scripts/nullaway/annotator/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8.txt
../annotator/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/tests/RelOperatorTest.java:33: error: [NullAway] @NonNull static field s_drivers not initialized
  private static Schema s_drivers;
                        ^
    (see http://t.uber.com/nullaway )
../annotator/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/tests/RelOperatorTest.java:36: error: [NullAway] @NonNull static field s_rides not initialized
  private static Schema s_rides;
                        ^
    (see http://t.uber.com/nullaway )
../annotator/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/tests/RelOperatorTest.java:39: error: [NullAway] @NonNull static field s_groups not initialized
  private static Schema s_groups;
                        ^
    (see http://t.uber.com/nullaway )
../annotator/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/tests/RelOperatorTest.java:325: error: [NullAway] dereferenced expression random is @Nullable
        int r1 = Math.abs(random.nextInt() % SUPER_SIZE + 1);
                                ^
    (see http://t.uber.com/nullaway )
../annotator/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/tests/TestDriver.java:63: error: [NullAway] @NonNull field counts not initialized
  protected ArrayList<CountData> counts;
                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/global/RID.java:28: error: [NullAway] initializer method does not guarantee @NonNull field pageno (line 10) is initialized along all control-flow paths (remember to check for exceptions or early returns).
  public RID(RID rid) {
         ^
    (see http://t.uber.com/nullaway )
../annotator/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/global/SearchKey.java:96: error: [NullAway] initializer method does not guarantee @NonNull field value (line 27) is initialized along all control-flow paths (remember to check for exceptions or early returns).
  public SearchKey(SearchKey key) {
         ^
    (see http://t.uber.com/nullaway )
../annotator/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/global/SearchKey.java:122: error: [NullAway] initializer method does not guarantee @NonNull field value (line 27) is initialized along all control-flow paths (remember to check for exceptions or early returns).
  public SearchKey(byte[] data, short offset) {
         ^
    (see http://t.uber.com/nullaway )
../annotator/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/global/Page.java:24: error: [NullAway] initializer method does not guarantee @NonNull field data (line 10) is initialized along all control-flow paths (remember to check for exceptions or early returns).
  public Page(byte[] data) {
         ^
    (see http://t.uber.com/nullaway )
../annotator/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/global/Minibase.java:17: error: [NullAway] @NonNull static field DiskManager not initialized
  public static DiskMgr DiskManager;
                        ^
    (see http://t.uber.com/nullaway )
../annotator/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/global/Minibase.java:20: error: [NullAway] @NonNull static field BufferManager not initialized
  public static BufMgr BufferManager;
                       ^
    (see http://t.uber.com/nullaway )
../annotator/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/externalSort/SortMergeJoin.java:23: error: [NullAway] initializer method does not guarantee @NonNull field iter (line 22) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public SortMergeJoin(FileScan fileScan, FileScan fileScan2, final int i, final int j) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/externalSort/SortMergeJoin.java:149: error: [NullAway] initializer method does not guarantee @NonNull field iter (line 22) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public SortMergeJoin(SortMergeJoin join1, FileScan fileScan2, final int i, final int j) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/externalSort/SortMergeJoin.java:181: error: [NullAway] assigning @Nullable expression to @NonNull field
		iter = null;
		     ^
    (see http://t.uber.com/nullaway )
../annotator/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Iterator.java:92: error: [NullAway] returning @Nullable expression from method with @NonNull return type
	return schema;
	^
    (see http://t.uber.com/nullaway )
../annotator/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/FileScan.java:70: error: [NullAway] method returns @Nullable, but superclass method relop.Iterator.getNext() returns @NonNull
  @Nullable public Tuple getNext() {
                         ^
    (see http://t.uber.com/nullaway )
../annotator/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/IndexScan.java:72: error: [NullAway] method returns @Nullable, but superclass method relop.Iterator.getNext() returns @NonNull
  @Nullable public Tuple getNext() {
                         ^
    (see http://t.uber.com/nullaway )
../annotator/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Selection.java:77: error: [NullAway] assigning @Nullable expression to @NonNull field
    iter = null;
         ^
    (see http://t.uber.com/nullaway )
../annotator/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/SimpleJoin.java:65: error: [NullAway] assigning @Nullable expression to @NonNull field
	  iter = null;
	       ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
19 errors
